--- a/project.css
+++ b/project.css
@@ -539,7 +539,7 @@ section {
   }
 }
 
-/* PAID UNPAID UN....... COMPLETED */
+/* PAID UNPAID UNFINISHED COMPLETED */
 .description {
   display: inline-flex;
   align-items: center;
@@ -615,6 +615,7 @@ section {
   background: var(--white);
   width: 100%;
   border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.35);
 }
 
 .purple {
@@ -672,11 +673,11 @@ h1 ~ i {
 }
 
 .right .fa-magnifying-glass {
-  font-size: 0.7em;
+  font-size: 0.6em;
   background: var(--white);
   position: absolute;
-  top:1.2em;
-  left: 1.25em;
+  top: 1.525em;
+  left: 1.55em;
 }
 
 .bg-purple {
@@ -722,7 +723,6 @@ h1 ~ i {
   position: relative;
   width: 100%;
   flex: 1 1 100%;
-
 }
 
 .vertical {
@@ -737,7 +737,7 @@ h1 ~ i {
   padding: 0 0 1em 5em;
 }
 
-.time > p{
+.time > p {
   flex: 1 1 100%;
 }
 
@@ -852,6 +852,10 @@ h1 ~ i {
 
 .right3 {
   float: right;
+}
+
+.white-2 {
+  background: var(--white);
 }
 
 .money {
